x overflow fix

--- a/main.css
+++ b/main.css
@@ -13,7 +13,7 @@ html {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
 }
 
@@ -41,7 +41,7 @@ html {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 100vw;
+    width: 100%;
     height: 15vh;
     transition: 0.2s;
 }
@@ -87,7 +87,7 @@ html {
     /* align-items: top; */
     /* justify-content: center; */
     flex-direction: column;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
 }
 
@@ -101,7 +101,7 @@ html {
 #particles-div {
     top:0;
     left: 0;
-    width: 100vw;
+    width: 100%;
     height: 50vh;
     position: absolute;
     background: rgba(0,0,0,0);
@@ -169,7 +169,7 @@ html {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
 }
 
@@ -220,7 +220,7 @@ html {
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
 }
 
@@ -230,7 +230,7 @@ html {
     justify-content: center;
     align-items: center;
     background: blue;
-    border: 1pt solid white;
+    /* border: 1pt solid white; */
 }
 
 .skillspagecol {
@@ -255,6 +255,6 @@ html {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
 }
